jwt 로직 변경